[gd_scene load_steps=7 format=3 uid="uid://c36jvhysosdkc"]

[ext_resource type="Script" path="res://scripts/game/player_hand.gd" id="1_23vsm"]
[ext_resource type="FontFile" uid="uid://cbrwe0wv4lsqf" path="res://assets/fonts/Montserrat-Medium.ttf" id="2_lc3wj"]
[ext_resource type="Texture2D" uid="uid://ciq1pqyvt3rag" path="res://assets/images/ui/sort_icon.png" id="3_npvok"]
[ext_resource type="Texture2D" uid="uid://cku2a5vb3l84b" path="res://assets/images/ui/play_icon.png" id="4_r3vqt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygqb8"]
bg_color = Color(0.156863, 0.439216, 0.176471, 0.847059)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.309804, 0.611765, 0.309804, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pvku"]
bg_color = Color(0.101961, 0.294118, 0.462745, 0.847059)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.258824, 0.47451, 0.709804, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2

[node name="PlayerHand" type="Node2D"]
script = ExtResource("1_23vsm")

[node name="CardsContainer" type="Node2D" parent="."]
position = Vector2(0, -20)

[node name="SortButton" type="Button" parent="."]
offset_left = -200.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("2_lc3wj")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_ygqb8")
text = "Ordenar"
icon = ExtResource("3_npvok")
expand_icon = true

[node name="PlayButton" type="Button" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("2_lc3wj")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_1pvku")
disabled = true
text = "Jugar"
icon = ExtResource("4_r3vqt")
expand_icon = true

[node name="NoCardsLabel" type="Label" parent="."]
visible = false
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("2_lc3wj")
theme_override_font_sizes/font_size = 18
text = "Esperando cartas..."
horizontal_alignment = 1
vertical_alignment = 1